--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,8 @@
+ocamlc -c Path.ml 
 ocamllex Lexer.mll
 ocamlyacc Parser.mly
 ocamlc -c Parser.mli
 ocamlc -c Lexer.ml
 ocamlc -c Parser.ml
 ocamlc -c love.ml
-ocamlc -o love Lexer.cmo Parser.cmo love.cmo
+ocamlc -o love Lexer.cmo Parser.cmo love.cmo Path.cmo
